// Copyright (c) 2020 The Open-Transactions developers
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTStorageWorkflowType";
option optimize_for = LITE_RUNTIME;

import public "PaymentWorkflowEnums.proto";

message StorageWorkflowType {
    optional uint32 version = 1;
    optional string workflow = 2;
    optional PaymentWorkflowType type = 3;
    optional PaymentWorkflowState state = 4;
}
